--- a/MyFriendApp/Views/Pages/ScanQRCodePage/Portraits/ScanQRCodePagePortrait.xaml
+++ b/MyFriendApp/Views/Pages/ScanQRCodePage/Portraits/ScanQRCodePagePortrait.xaml
@@ -2,18 +2,34 @@
 <ContentView xmlns="http://xamarin.com/schemas/2014/forms" 
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MyFriendApp.Pages.ScanQRCodePagePortrait"
-             xmlns:zxing="clr-namespace:ZXing.Net.Mobile.Forms;assembly=ZXing.Net.Mobile.Forms">
+             BackgroundColor="{StaticResource BaseWhiteColor}"
+             xmlns:zxing="clr-namespace:ZXing.Net.Mobile.Forms;assembly=ZXing.Net.Mobile.Forms"
+             xmlns:gv="clr-namespace:GoogleVisionBarCodeScanner;assembly=BarcodeScanner.XF">
   <ContentView.Content>
-      <StackLayout>
-            <!--OnScanResult="scanView_OnScanResult"-->
-            <zxing:ZXingScannerView x:Name="scanView"
-                                    
-                                    IsScanning="True"
-                                    VerticalOptions="CenterAndExpand"
-                                    HorizontalOptions="CenterAndExpand"
-                                    WidthRequest="300"
-                                    HeightRequest="300"/>
-            <zxing:ZXingDefaultOverlay TopText="Scan QR Code"/>
+        <StackLayout Padding="{StaticResource SmallMargin}"
+                     Spacing="{StaticResource NormalRowSpacing}">
+
+            <gv:CameraView HorizontalOptions="FillAndExpand"
+                           VerticalOptions="FillAndExpand"
+                           OnDetected="CameraView_OnScan"
+                           DefaultTorchOn="True"
+                           VibrationOnDetected="False"
+                           AutoStartScanning="True"
+                           RequestedFPS="30"
+                           ScanInterval="500"/>
+            
+            <Button Grid.Column="0"
+                    Padding="{StaticResource SmallMargin}"
+                    Text="User QR Code from Gallery"
+                    FontAttributes="Bold"
+                    Style="{StaticResource LoginButtonStyle}"
+                    CornerRadius="{StaticResource BaseButtonCornerRadius}"
+                    Command="{Binding NavigateScanQRCodeCommand}"
+                    VerticalOptions="CenterAndExpand"
+                    HorizontalOptions="CenterAndExpand"/>
+
+            <Entry x:Name="txtQRCode"/>
+
         </StackLayout>
   </ContentView.Content>
 </ContentView>
